fixed horizontal scrollbar

--- a/src/main.scss
+++ b/src/main.scss
@@ -10,6 +10,7 @@ body {
     padding: 0;
     color: $type-gray;
     font-family: "Helvetica Neue", "Helvetica", Arial, sans-serif;
+    overflow-x: hidden;
 }
 
 /* Typography */
